--- a/blueberries/src/ContactUs/ContactUs.css
+++ b/blueberries/src/ContactUs/ContactUs.css
@@ -4,3 +4,10 @@
     width: fit-content;
     margin: auto;
 }
+.theLi{
+    color: rgb(7, 7, 7);
+    background-color:rgba(255, 255, 255, 0.849) ;
+    margin: auto;
+    margin-bottom: 10px;
+    max-width: 300px;
+}
