--- a/blueberries/src/Store/Store.css
+++ b/blueberries/src/Store/Store.css
@@ -1,90 +1,59 @@
-ul {
-    padding: 0;
-    list-style: none;
-  }
-  .productImage{
-    width: 70%;
+.products {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width:90% ;
+margin: auto; 
+justify-content: space-evenly;
+margin-top: 20px;
+
+}
+.store{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.store>h1{
+margin: auto;
+color: aliceblue;
+}
+.card{
+  width :20%;
+  min-width: 200px;
+  background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  border: aqua 3px solid;
+  border-radius: 10px;
+  margin: 10px;
+
+}
+
+.card >img{
+  width: 90%;
+  min-width: 120px;
   }
 
-  .addToBucket{
-    width: 40px;
-   float: right;
-   cursor: pointer;
-  }
-  .addToBucket:hover{
-    width: 45px;
-    height: 45px;
-  }
-  
-  main {
-    min-height: 100vh;
-    display: grid;
-    grid-template-columns: 20rem 1fr;
-  }
-  
-  .filters {
-    padding: 2rem;
-    background-color: hsl(220, 20%, 90%);
-  }
-  
-  h1 {
-    position: relative;
-    font-weight: 900;
-    font-size: 2.5rem;
-    margin-bottom: 3rem;
-  }
-  
-  h1::after {
-    content: "";
-    position: absolute;
-    top: calc(100% + 0.5rem);
-    left: 0;
-    width: 4rem;
-    height: 0.25rem;
-    background-color: #fff;
-  }
-  
-  fieldset {
-    margin-top: 0.5rem;
-    border: 0.25rem solid hsl(200, 10%, 98%);
-  }
-  
-  legend {
-    font-weight: bold;
-  }
-  
-  label {
-    display: block;
-  }
-  
-  label + label {
-    margin-top: 0.25rem;
-  }
-  
-  input {
-    margin-left: 0.5rem;
-    vertical-align: middle;
-  }
-  
-  .dishes {
-    padding: 4rem;
-  }
-  
-  .grid {
-    margin-top: 1rem;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
-    grid-gap: 1.5rem;
-    align-content: start;
-  }
-  
-  .card {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    grid-gap: 0.25rem;
-    border-radius: 0.25rem;
-    box-shadow: 0 2px 6px hsla(220, 10%, 30%, 0.2),
-      0 8px 16px hsla(220, 10%, 30%, 0.2);
-    padding: 1rem;
-    background-color: #fff;
-  }
+  .addToCart{
+    width: 20%;
+    cursor: pointer;
+    }
+    .price {
+      align-self: flex-end;
+    }
+    .lastLine{
+      margin-top: auto;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    @media only screen and (max-width: 600px) {
+.card{
+  width: 95%;
+
+}
+
+    }
