--- a/blueberries/src/Store/MyCard/MyCard.css
+++ b/blueberries/src/Store/MyCard/MyCard.css
@@ -1,55 +1,63 @@
-.myCard_button{
-    position: fixed;
-    z-index: 4;
-    top: 10%;
-    right: 1%;
-    width: 40px;
-    height: 40px;
-    transition: all 0.5s ease-in;
-    outline: none;
-    cursor: pointer;
+.myCard_button {
+  position: fixed;
+  z-index: 4;
+  top: 10%;
+  right: 1%;
+  width: 40px;
+  height: 40px;
+  transition: all 0.5s ease-in;
+  outline: none;
+  cursor: pointer;
 }
 
-.myCard{
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 3;
-    min-height: 100%;
-    max-height: 100%;
-    width: 100%;
-    transform: translateX(+200%);
-    background-color: lightblue;
-    transition: all 0.5s ease-in;
-    box-shadow: 1px 0 3px grey;
-    max-width: 550px;
-    overflow-y: scroll;
+.myCard {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 3;
+  min-height: 100%;
+  max-height: 100%;
+  width: 100%;
+  transform: translateX(+200%);
+  background-color: lightblue;
+  transition: all 0.5s ease-in;
+  box-shadow: 1px 0 3px grey;
+  max-width: 550px;
+  overflow-y: scroll;
 }
 
 .myCard_visible {
-    transform: translateX(0);
-  }
-  .myCard_button_visible {
-    transform: scale(0.7);
-    top: 0%;
-    right: 0%;
-  }
-  .myCardElements{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-  }
-table{
-    width: 100%;
+  transform: translateX(0);
 }
-  table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-  }
-  .tableinput{
-      width: 80%;
-  }
-  .removeSymbol{
-    width: 20px ;
-  }
-  
+.myCard_button_visible {
+  transform: scale(0.7);
+  top: 0%;
+  right: 0%;
+}
+.myCardElements {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+table {
+  width: 100%;
+}
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+.tableinput {
+  width: 80%;
+}
+.removeSymbol {
+  width: 20px;
+}
+.cardNumber {
+  background-color: aliceblue;
+  width: fit-content;
+  height: fit-content;
+  margin-top: 40px;
+  margin-right: 60px;
+}
